# FFMPEG

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/emery/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio-play.cpp  com_example_emery_ffmpeg_AudioPlayer.h  com_example_emery_ffmpeg_EmeryPlayer.h  com_example_emery_ffmpeg_MyViedeoView.h  com_example_emery_ffmpeg_VideoPlayer.h  emery-player.cpp  ffmepg-audio.cpp  ffmepg-audio.h  ffmpeg-video.cpp  ffmpeg-video.h  header.h  my-log.h  native-lib.cpp  open-sl-es-audio-play.cpp  video-play.cpp
app/src/main/java/com/example/emery/ffmpeg/: AudioPlayActivity.java  AudioPlayer.java  AudioVideoActivity.java  Constant.java  EmeryPlayer.java  MainActivity.java  MyViedeoView.java  VideoPlayActivity.java  VideoPlayer.java
app/src/main/res/layout/: activity_audio_play.xml  activity_audio_video.xml  activity_main.xml  activity_video_play.xml
app/src/test/java/com/example/emery/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
