

cmake_minimum_required(VERSION 3.4.1)



add_library(
             native-lib

             SHARED

             src/main/cpp/video-play.cpp
             src/main/cpp/native-lib.cpp )


include_directories(libs/include)

find_library( log-lib
              log )

find_library( android-lib
              android)

set(DIR ../../../../libs)

add_library(avcodec-57
            SHARED
            IMPORTED)
set_target_properties(avcodec-57
                      PROPERTIES IMPORTED_LOCATION
                      ${DIR}/armeabi/libavcodec-57.so)



add_library(avdevice-57
            SHARED
            IMPORTED)
set_target_properties(avdevice-57
                      PROPERTIES IMPORTED_LOCATION
                      ${DIR}/armeabi/libavdevice-57.so)

add_library(avfilter-6
            SHARED
            IMPORTED)
set_target_properties(avfilter-6
                      PROPERTIES IMPORTED_LOCATION
                      ${DIR}/armeabi/libavfilter-6.so)

add_library(avformat-57
            SHARED
            IMPORTED)
set_target_properties(avformat-57
                      PROPERTIES IMPORTED_LOCATION
                      ${DIR}/armeabi/libavformat-57.so)

add_library(avutil-55
            SHARED
            IMPORTED)
set_target_properties(avutil-55
                      PROPERTIES IMPORTED_LOCATION
                      ${DIR}/armeabi/libavutil-55.so)


add_library(swresample-2
            SHARED
            IMPORTED)
set_target_properties(swresample-2
                      PROPERTIES IMPORTED_LOCATION
                      ${DIR}/armeabi/libswresample-2.so)

add_library(swscale-4
            SHARED
            IMPORTED)
set_target_properties(swscale-4
                      PROPERTIES IMPORTED_LOCATION
                      ${DIR}/armeabi/libswscale-4.so)



target_link_libraries(
                       native-lib
                       avcodec-57
                       avdevice-57
                       avfilter-6
                       avformat-57
                       avutil-55
                       swresample-2
                       swscale-4
                       ${log-lib}
                       ${android-lib})